# iNEXT 2.0.12
- Fixes vignettes error for `ggplot2` update.
- Adds argument `conf` for `estimateD` function.
- Fixes issue #12, 13

# iNEXT 2.0.13
- Fixes the plot display `NA` in the legend (After `ggplot2` was updated to version 2.2.0)

# iNEXT 2.0.14
- Fixes the warning message for `EstiBootComm.Ind` and `EstiBootComm.Sam`.

# iNEXT 2.0.15
- Modify the incidence case to make  it consistent with abundance case.

# iNEXT 2.0.16
- Modify the BootstrapFun for oddly warning message (issue #31).

# iNEXT 2.0.17
- Modify Error in duplicated levels/labels (issue #25).

# iNEXT 2.0.18
- Update ggiNEXT.R (Fix legend problem of ggiNEXT).

# iNEXT 2.0.19
- Modified `Dqhat.Ind` and `Dqhat.Sam` to make them more efficient.

# iNEXT 2.0.20
- Modify Error in R 4.0.0 (issue #46).

# iNEXT 2.1.0
- Add the parameter q to estimateD function. And its output form is correspondingly slightly changed.
- Change the facet label of diversity order in ggiNEXT from `0`, `1`, `2` to `q = 0`,`q = 1`, `q = 2`, respectively.
- Change the default colors of ggiNEXT to make them color-blind friendly.
- Improve the efficiency of `Dqhat.Ind` and rename it as `TD.m.est`. (Similarly, `Dqhat.Sam` is renamed as `TD.m.est_inc`)

# iNEXT 2.1.1
- Change default value of `level` of `estimateD` if it is not specified by users.
- Correct version number in description file.

# iNEXT 2.1.2
- Correct the facet label when `type = 2` in `ggiNEXT`, which is supposed not to appear.
- Slighty modification on the confidence interval method for asymptotic estimates.
- Fix a bug in the incidence extrapolation 

